# openeyes

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
desktop/: README.md  pyproject.toml
desktop/src/openeyes_desktop/: desktop.py  server.py  vision.py
src/viewport_browser/: browser.py  dashboard.py  server.py  tracker.py  vision.py
src/viewport_desktop/: desktop.py  server.py  vision.py
web/: README.md  SKILL.md  pyproject.toml
web/src/openeyes_web/: browser.py  dashboard.py  server.py  tracker.py  vision.py
