[project]
name = "openeyes-desktop"
version = "0.1.0"
description = "OpenEyes Desktop — vision-first desktop controller for AI agents. Full computer control through screenshots and input simulation."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
]

[project.scripts]
openeyes-desktop = "openeyes_desktop.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openeyes_desktop"]
