[project]
name = "openeyes-web"
version = "0.1.0"
description = "OpenEyes Web — vision-first web browser for AI agents. See what your agents see."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "playwright>=1.40.0",
    "Pillow>=10.0.0",
    "websockets>=12.0",
    "pytesseract>=0.3.10",
]

[project.scripts]
openeyes-web = "openeyes_web.server:main"
openeyes-web-serve = "openeyes_web.server:serve"
openeyes-web-dashboard = "openeyes_web.dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openeyes_web"]
